--- a/CarbonFootprint_site/templates/Ita/Supporto/_plot_helper.html
+++ b/CarbonFootprint_site/templates/Ita/Supporto/_plot_helper.html
@@ -48,7 +48,7 @@
                     stacked: true,
                     title: {
                         display: true,
-                        text: 'Emission [kg CO2/year]'
+                        text: 'Emissioni [kg CO2/year]'
                     }
 
                 }
