--- a/CarbonFootprint_site/templates/Ita/Supporto/form_layout.html
+++ b/CarbonFootprint_site/templates/Ita/Supporto/form_layout.html
@@ -1,13 +1,13 @@
-{%extends "main.html" %}
-{% from "support/_form_helpers.html" import render_form %}
+{%extends "Ita/main.html" %}
+{% from "Ita/Supporto/_form_helpers.html" import render_form %}
 {%block form%}
 <form class="home-form" method="POST" action="/">
   {{ render_form(form, main_class.input_list) }}
   <div class="subsection-class">
     <span class="home-text-fancy">
-      Once you have filled you data hit the bottom below!!
+      Una volta compilati tutti i campi clicca sul pulsante qui sotto!
     </span>
-    <button class="home-button button">Calculate</button>
+    <button class="home-button button">Calcola</button>
   </div>
 </form>
 {%endblock%}
