--- a/CarbonFootprint_site/templates/Eng/0 - layout.html
+++ b/CarbonFootprint_site/templates/Eng/0 - layout.html
@@ -132,7 +132,8 @@
             <header data-role="Header" class="header_class">
 
                 <a href='https://www.unifi.it/changelang-eng.html' target="_blank"><img alt="image" src="static/images/logo_unifi.png" class="header-logo-image"/></a>
-                <a href='/'><img alt="logo" src="static/images/logo_app.png" class="header-logo-image"/></a>
+                <img alt="logo" src="static/images/logo_app.png" class="header-logo-image"/>
+                <a href='/'><img alt="logo" src="static/images/Flag_of_Italy_rt .png" class="header-logo-image"/></a>
 
             </header>
 
@@ -141,7 +142,7 @@
 
             <footer class="footer_class">
                 <div class="footer_text">
-                    CarbonApp - developed by the <a href='https://www.dief.unifi.it/vp-167-serg.html' target="_blank">SERG Group</a>, 
+                    CarbonApp - developed by the <a href='https://www.dief.unifi.it/vp-167-serg.html' target="_blank">SERG Group</a>,
                     part of the Department of Industrial Engeneering, University of Florence
                 </div>
             </footer>
