--- a/CarbonFootprint_site/templates/Eng/how-it-works.html
+++ b/CarbonFootprint_site/templates/Eng/how-it-works.html
@@ -1,4 +1,4 @@
-{%extends "0 - layout.html"%}
+{%extends "Eng/0 - layout.html" %}
 {%block title%}Results{%endblock%}
 {%block content%}
 <link href="static/how-it-works.css" rel="stylesheet" />
@@ -6,7 +6,7 @@
   <div class="ovr_container">
     <div class="text-container">
       <span class="title-text">
-        How it works
+        How it works ?
       </span>
     </div>
     <div class="text-container">
@@ -15,11 +15,12 @@
 	  </span>
 	  <br>
       <span class="text-std">
-        CarbonApp is a tool that calculates the <span class="text-bold">emissions of Carbon Dioxide</span>
-        equivalent related to the <span class="text-bold">lifestyle of a single person</span>. To evaluate the impact of a specific
-        person we use data provided by the user about hiss or hers lifestyle. These data are converted into a emission
-        factor using correlations retrieved in the <span class="text-bold">scientific literature</span>. The sources are listed in the Excel file that
-        you can download at the end of the page.
+        Carbonapp is an app that helps calculate <span class="text-bold">carbon dioxide equivalent emissions
+      </span> <a href="https://ec.europa.eu/eurostat/statistics-explained/index.php?title=Glossary:Carbon_dioxide_equivalent#:~:text=A%20carbon%20dioxide%20equivalent%20or,with%20the%20same%20global%20warming" target=”_blank” rel="noopener" style="color:#005B8F;">
+		  <span class="text-bold">(definition)</span> </a> based on the lifestyle of each individual.
+          To estimate the impact caused by an individual, reference is made to data provided directly by the user.
+          This data is then translated into an emission factor using formulas found in the scientific literature.
+          The sources are given in an excel file that can be downloaded at the bottom of the page.
       </span>
     </div>
 	<div class="text-container">
@@ -47,33 +48,30 @@
     </div>
     <div class="text-container">
 	  <span class="text-fancy">
-		How to use it
+		How to use it?
 	  </span>
 	  <br>
       <span class="text-std">
-        For the <span class="text-bold">Diet</span> section the user have to insert data about a typical week, and what you
-        eat in average quantities. For the <span class="text-bold">Transport</span> section, you have to similarly insert
-        data about which method to move around in a typical week you use. Obviously, the number of kilometers travelled by
-        foot or by bike are not considered as they are associated with negligible emissions. For the
-        <span class="text-bold">House</span> section, the first thing to insert is the number of people that you
-        share the house with, because it allows to distribute the impact of some part, like the impact of house heating or washing machine;
-        the elements that are corrected with the number of family members are indicated into the information box below
-        the input groups. For the <span class="text-bold">Clothes</span> section, you have to insert the number
-        of clothes that you buy each year.
+
+          In the <span class="text-bold">Diet</span> section, the user must enter data on the food intake for a typical week, indicating the average quantities consumed.
+          Similarly, under <span class="text-bold">Transport</span>, information must be entered concerning weekly travel, excluding kilometres travelled on foot or by bicycle, which are not taken into account.
+          Similarly, in the <span class="text-bold">House</span>, the first information to be entered is the number of people you live with and the emissions for each individual; this concerns collective emissions such as those related to heating or the use of the washing machine.
+          Finally, in the <span class="text-bold">Clothes</span> section, you must indicate the number of items of clothing bought each year.
+
       </span>
     </div>
     <div class="text-container">
       <span class="text-std">
-        Once you have done with the input collection you can press the  <span class="text-bold">"Calculate"</span> button in order to see your results.
+       Once you have finished filling in all the fields, you can view the results by clicking on <span class="text-bold">"Calculate"</span>.
+
       </span>
     </div>
   </div>
   <div class="subsection-class">
   <span class="home-text-fancy">
-    With the following button you can download an Excel file that
-    contains all the reference and data used for this web site
+   By clicking on the following link you can download the excel file containing the sources and data used for the creation of this site
   </span>
-  <a href="/references">
+  <a href="/references_eng">
     <button class="home-button button">References</button>
   </a>
 </div>
