--- a/CarbonFootprint_site/templates/Ita/results.html
+++ b/CarbonFootprint_site/templates/Ita/results.html
@@ -1,34 +1,34 @@
-{%extends "0 - layout.html"%}
-{% from "support/_plot_helper.html" import render_plot_script, render_comparison_plot_script, render_subclass_plot_script%}
-{%block title%}Results{%endblock%}
+{%extends "Ita/0 - layout.html" %}
+{% from "Ita/Supporto/_plot_helper.html" import render_plot_script, render_comparison_plot_script, render_subclass_plot_script%}
+{%block title%}Risultati{%endblock%}
 {%block content%}
 <div class="subsection-class-no-border">
   <span class="home-text-fancy">
-    Here you can find some results evaluated from the information that you have provided!
+    Qui puoi trovare i risultati della tua indagine!
   </span>
 </div>
 <fieldset class="subsection-class">
-  <legend class="text-title">MAIN RESULTS</legend>
+  <legend class="text-title">RISULTATI </legend>
   <div class="subsection-container">
     <fieldset class="container-sub-subsection">
-      <legend><span class="italic-text">Total impact</span></legend>
+      <legend><span class="italic-text">Emissioni totali</span></legend>
         <div class="inside-container">
           <canvas id={{main_class.plotter.id}} class="canvas-class"></canvas>
           <p class="label">
-            Total Emission<br>
+            Emissioni totali<br>
             <span class="big">{{main_class.plotter.overall_yearly_ton_impact}}</span><br>
             [Ton CO<sub>2</sub> / year]
           </p>
         </div>
     </fieldset>
     <fieldset class="container-sub-subsection">
-      <legend><span class="italic-text">You respect the world</span></legend>
+      <legend><span class="italic-text">La tua posizione globale</span></legend>
       <div><canvas id={{main_class.plotter.comparison_id}} class="canvas-class"></canvas></div>
     </fieldset>
   </div>
 </fieldset>
 <fieldset class="subsection-class">
-  <legend class="text-title">CATEGORY RESULTS</legend>
+  <legend class="text-title">RISULTATI PARZIALI</legend>
   <div class="subsection-container">
     {% for sub_class in main_class.input_list %}
     <fieldset class="container-sub-subsection">
@@ -36,7 +36,7 @@
       <div class="inside-container">
         <canvas id={{sub_class.plotter.id}} class="canvas-class"></canvas>
         <p class="label">
-          Total Emission<br>
+          Emissioni totali<br>
           <span class="big">{{sub_class.plotter.overall_yearly_ton_impact}}</span><br>
           [Ton CO<sub>2</sub> / year]
         </p>
