--- a/CarbonFootprint_site/templates/Ita/0 - layout.html
+++ b/CarbonFootprint_site/templates/Ita/0 - layout.html
@@ -142,9 +142,8 @@
 
             <footer class="footer_class">
                 <div class="footer_text">
-                    CarbonApp è un prodotto del Dipartimento di Ingegneria Industriale dell'Università di Firenze.
-                    Il responsabile del dominio assume la responsabilità del sito quanto a privacy,
-                    protezione dati, accessibilità, usabilità e contenuti.
+                    CarbonApp - Sviluppato da <a href='https://www.dief.unifi.it/vp-167-serg.html' target="_blank">SERG Group</a>,
+                    parte del Dipartimento di Ingegneria Industriale dell'Università di Firenze
                 </div>
             </footer>
 
