--- a/CarbonFootprint_site/templates/Ita/0 - layout.html
+++ b/CarbonFootprint_site/templates/Ita/0 - layout.html
@@ -142,7 +142,7 @@
 
             <footer class="footer_class">
                 <div class="footer_text">
-                    CarbonApp - Sviluppato da <a href='https://www.dief.unifi.it/vp-167-serg.html' target="_blank">SERG Group</a>,
+                    CarbonApp - Sviluppato dal <a href='https://www.dief.unifi.it/vp-167-serg.html' target="_blank">SERG Group</a>,
                     parte del Dipartimento di Ingegneria Industriale dell'Università di Firenze
                 </div>
             </footer>
